tests/compile_fail/array_length_err.rs
use encase::{ArrayLength, WgslType};

fn main() {}

#[derive(WgslType)]
struct Test {
    a: ArrayLength,
    b: ArrayLength,
}
